[package]
name = "cubiomes"
version = "0.1.3"
edition = "2021"
authors = ["Ville Kujala"]
description = "A safe rust wrapper for the cubiome library"
license = "MIT"
keywords = ["minecraft", "minecraft-worldgen"]
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/villevilli/cubiomes-rs/"

[features]
default = ["cc_build"]
cc_build = ["cubiomes-sys/cc_build"]

[dependencies]
thiserror = "2.0"
bitflags = "2.0"
cubiomes-sys = { path = "../cubiomes-sys", version = "0.1.0", default-features = false }

[dev-dependencies]
rand = "0.9.0"
